[gd_scene load_steps=2 format=3 uid="uid://bui"]

[ext_resource type="Script" path="res://scripts/UI.gd" id="1"]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 50.0
value = 100.0

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 60.0
offset_right = 220.0
offset_bottom = 90.0
text = "Score: 0"

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0

[node name="GameOverLabel" type="Label" parent="GameOverPanel"]
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.4
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 20.0
text = "GAME OVER"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverPanel"]
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
offset_left = -50.0
offset_top = -20.0
offset_right = 50.0
offset_bottom = 20.0
text = "Restart"
